thumbnail, etiketler, strong em düzenlemeleri

--- a/content/dergi/sayi-3-bauhaus-ekolu.html
+++ b/content/dergi/sayi-3-bauhaus-ekolu.html
@@ -13,7 +13,7 @@ sayfa="01"
 yazar=["atahan gokturk"]
 type="sayfa"
 tags= [
-"anasayfa", "dergi", "bauhaus"
+"dergi", "bauhaus", "sanat akimi"
 ]
 +++
 
