--- a/content/dergi/sayi-5/3d-yazicilar/index.html
+++ b/content/dergi/sayi-5/3d-yazicilar/index.html
@@ -4,12 +4,12 @@ description=""
 url="sayi-5/3b-yazicilar-ve-uretim"
 aciklama="Bir önceki sayıda 3B yazım sürecine; detaylıca makine türlerine ve malzemelerine; tasarımcılar olarak 3B baskıya uygun ve doğru ürünler elde edebilmek için tasarım aşamasında dikkat edilmesi gereken hususlara değinmiştik. Bu sayıda ise 3B yazıcıların endüstriyel üretimde neden ve nasıl kullanıldığına/kullanılmadığına değineceğiz."
 type="sayfa"
-thumb="/img/"
+thumb="/img/3b-yazicilar-uretim-thumbnail.jpg"
 date = "2021-01-01"
 sayi=["05"]
 sayfa="07"
 yazar=["hilal doruk"]
-tags= ["ana sayfa", "dergi"]
+tags= ["anasayfa", "dergi", "3d baski"]
 +++
 
 <div class="container">
