--- a/content/dergi/sayi-5/beyin-firtinasi/index.html
+++ b/content/dergi/sayi-5/beyin-firtinasi/index.html
@@ -4,12 +4,12 @@ description=""
 url="sayi-5/beyin-firtinasi-nedir"
 aciklama="Beyin fırtınası, belirlenen konu -sorun- üzerinde birey(ler)in çeşitli fikirler üreterek çözümler bulmasını sağlayan yaratıcı düşünme yöntemidir."
 type="sayfa"
-thumb="/img/"
+thumb="/img/brainstorming-beyin-firtinasi-thumbnail.jpg"
 date = "2021-01-01"
 sayi=["05"]
 sayfa="08"
 yazar=["goksu gokturk"]
-tags= ["ana sayfa", "dergi"]
+tags= ["anasayfa", "dergi", "tasarim sozlugu"]
 +++
 
 <div class="container">
