--- a/content/dergi/sayi-5/ikonik-tasarimlar-lego/index.html
+++ b/content/dergi/sayi-5/ikonik-tasarimlar-lego/index.html
@@ -9,7 +9,7 @@ date = "2021-01-01"
 sayi=["05"]
 sayfa="01"
 yazar=["zeynep dag"]
-tags= ["ana sayfa", "dergi"]
+tags= ["anasayfa", "dergi", "ikonik"]
 +++
 <div class="container">
    <div class="row">
