--- a/content/dergi/sayi-5/jukebox/index.html
+++ b/content/dergi/sayi-5/jukebox/index.html
@@ -4,12 +4,12 @@ description=""
 url="sayi-5/jukebox-muzik-kutusu"
 aciklama="Her şeyden önce ürünün ismi müzik kutusu değildi. -Altın çağlarında- jetonla çalışan fonograflar* olarak biliniyordu. En iyi mekanlarda bulunan fonograflar milyonlarca dolarlık iş yaptı. Kadrosuna; parlak tasarımcılar, milyoner senatörler ve hatta gangsterler de dahildi."
 type="sayfa"
-thumb="/img/"
+thumb="/img/jukebox-muzik-kutusu-thumbnail.jpg"
 date = "2021-01-01"
 sayi=["05"]
 sayfa="06"
 yazar=["zeynep yarar"]
-tags= ["ana sayfa", "dergi"]
+tags= ["anasayfa", "dergi"]
 +++
 
 <div class="container">
