--- a/content/dergi/sayi-5/liter-of-light/index.html
+++ b/content/dergi/sayi-5/liter-of-light/index.html
@@ -4,12 +4,12 @@ description=""
 url="sayi-5/liter-of-light"
 aciklama="21.Yüzyıl dünyasında temel ihtiyaçlar da dahil olmak üzere herkes eşit olanaklara sahip değil. Kimi coğrafyadaki bireyler için elektriğe ulaşmak hâlâ bir ayrıcalık sayılıyor. Dünyada bir milyara yakın insan doğal afetler ve ekonomik sebeplerle elektriğe hâlâ erişemiyor. Elektrik olmadan yaşamını sürdüren birçok topluma umut ışığı olan 'Liter of Light' projesiyle tanışalım."
 type="sayfa"
-thumb="/img/"
+thumb="/img/liter-of-light-thumbnail.jpg"
 date = "2021-01-01"
 sayi=["05"]
 sayfa="04"
 yazar=["elif ersoz"]
-tags= ["ana sayfa", "dergi"]
+tags= ["anasayfa", "dergi", "surdurulebilir tasarim", "ekoloji"]
 +++
 
 <div class="container">
