--- a/content/dergi/sayi-5/shakers/index.html
+++ b/content/dergi/sayi-5/shakers/index.html
@@ -4,12 +4,12 @@ description=""
 url="sayi-5/shakers"
 aciklama="Shaker’ların tüm estetik kavramı işleve dayandığından işlevsel olmayan biçim kesinlikle estetik sayılmamıştır. Biçim, işlevden türemiştir. Yerleşmenin seçimi, yerleşmelerdeki yapıların konumu, yapıdaki odalar, odadaki pencereler, bölmeler ve diğer özelliklerin yeri yararlarına göre belirlenmiştir."
 type="sayfa"
-thumb="/img/"
+thumb="/img/shakers-thumbnail.jpg"
 date = "2021-01-01"
 sayi=["05"]
 sayfa="02"
 yazar=["ecem hasbay"]
-tags= ["ana sayfa", "dergi"]
+tags= ["anasayfa", "dergi", "sanat akimi"]
 +++
 <div class="container">
 
