--- a/content/dergi/sayi-5/tasarimda-malzeme-karton/index.html
+++ b/content/dergi/sayi-5/tasarimda-malzeme-karton/index.html
@@ -4,12 +4,12 @@ description=""
 url="sayi-5/tasarimda-malzeme-karton"
 aciklama="Muhtemelen hepimiz gün içinde farkında olmadan kartondan yapılmış bir ürünü elimize alıyoruz. Peki ya kartonun ne olduğunu veya nasıl üretildiğini hiç düşündünüz mü?"
 type="sayfa"
-thumb="/img/"
+thumb="/img/tasarimda-malzeme-karton-thumbnail.jpg"
 date = "2021-01-01"
 sayi=["05"]
 sayfa="05"
 yazar=["eylul ecem sogutlu"]
-tags= ["ana sayfa", "dergi"]
+tags= ["anasayfa", "dergi", "tasarimda malzeme"]
 +++
 <div class="container">
 
