--- a/content/dergi/sayi-6/bakalit/index.html
+++ b/content/dergi/sayi-6/bakalit/index.html
@@ -4,12 +4,12 @@ description=""
 url="sayi-6/plastigin-dogusu-bakalit"
 aciklama="Tarih, geliştirdiğimiz ve kullandığımız malzemelerle şekillenir. Binlerce yıl araçlarını taştan yapan insanlar, bakır alaşımlarını öğrenerek Tunç Çağı'nı başlattı. Yüzyıllar sonra, süreci Demir Çağı devam ettirdi. 1907'de ise dünyanın ilk sentetik plastiği olan Bakalit, Polimer Çağı'nın başlangıcı oldu."
 type="sayfa"
-thumb=""
+thumb="/img/plastik-malzeme-bakalit-thumbnail.jpg"
 date = "2021-02-05"
 sayi=["06"]
 sayfa="03"
 yazar=["zeynep yarar"]
-tags= ["ana sayfa", "dergi"]
+tags= ["anasayfa", "dergi", "tasarımda malzeme", "plastik"]
 +++
 
 
