--- a/content/dergi/sayi-6/bic-cristal/index.html
+++ b/content/dergi/sayi-6/bic-cristal/index.html
@@ -4,12 +4,12 @@ description=""
 url="sayi-6/ikonik-tasarimlar-tukenmez-kalem-bic-cristal"
 aciklama="BIC Cristal model tükenmez kalemi görmeyenimiz ya da kullanmayanımız yoktur. Gündelik yaşamın ayrılmaz bir parçası olmuştur bu tükenmez kalem. Peki bu kadar göz önündeki bir kalemin bir tasarım klasiği olduğunu farkında mıyız?"
 type="sayfa"
-thumb=""
+thumb="/img/bic-cristal-pen-thumbnail.jpg"
 date = "2021-02-05"
 sayi=["06"]
 sayfa="05"
 yazar=["zeynep dag"]
-tags= ["ana sayfa", "dergi"]
+tags= ["anasayfa", "dergi", "ikonik"]
 +++
 
 <div class="container">
