--- a/content/dergi/sayi-6/dieter-rams/index.html
+++ b/content/dergi/sayi-6/dieter-rams/index.html
@@ -4,12 +4,12 @@ description=""
 url="sayi-6/dieter-rams-tasarim-felsefesi"
 aciklama="Kalbim ayrıntılarda saklıdır. Aslında ayrıntıları her zaman büyük resimden daha önemli buldum. Hiçbir şey ayrıntılar olmadan çalışmaz. Onlar her şeydir; kalitenin temelidir."
 type="sayfa"
-thumb="/markutdergiyazheader.jpg"
+thumb="/img/dieter-rams-thumbnail.jpg"
 date = "2021-02-05"
 sayi=["06"]
 sayfa="01"
 yazar=["hilal doruk"]
-tags= ["ana sayfa", "dergi"]
+tags= ["anasayfa", "dergi", "dieter rams"]
 +++
 
 <div class="container">
