--- a/content/dergi/sayi-6/kitsch/index.html
+++ b/content/dergi/sayi-6/kitsch/index.html
@@ -5,12 +5,12 @@ description=""
 url="sayi-6/tasarimda-kitsch-nedir"
 aciklama=" “Net ve katı tanımlar beklemeyin, aksi takdirde dersin sonunda pek çok sorunun yanıtsız kaldığını düşünürsünüz ki bu soruları ancak kitsch üzerine üç ciltlik bir çalışma yaparsam açıklayabilirim.” -Hermann Broch"
 type="sayfa"
-thumb=""
+thumb="/img/tasarimda-kitsch-thumbnail.jpg"
 date = "2021-02-05"
 sayi=["06"]
 sayfa="04"
 yazar=["goksu gokturk", "elif ersoz"]
-tags= ["ana sayfa", "dergi"]
+tags= ["anasayfa", "dergi", "tasarim sozlugu"]
 +++
 
 <div class="container">
