--- a/content/dergi/sayi-7/ikonik-koltuklar/index.html
+++ b/content/dergi/sayi-7/ikonik-koltuklar/index.html
@@ -9,7 +9,7 @@ date = "2021-03-02"
 sayi=["07"]
 sayfa="06"
 yazar=["zeynep dag"]
-tags= ["ana sayfa", "dergi", "ikonik"]
+tags= ["anasayfa", "dergi", "ikonik"]
 +++
 
 <div class="container">
@@ -42,16 +42,15 @@ tags= ["ana sayfa", "dergi", "ikonik"]
          <p>
             <strong>Paimio koltuk</strong>, Fin mimar
             <strong><em>Alvar Aalto</em></strong> tarafından 1931-32 yıllarında,
-            aynı zamanda mimarı olduğu <strong>Paimio Sanatorium</strong>’u için
-            özel olarak tasarladığı ikonik bir üründür. <strong>Aalto</strong>,
+            aynı zamanda mimarı olduğu Paimio Sanatorium’u için
+            özel olarak tasarladığı ikonik bir üründür. Aalto,
             Tüberküloz hastalarının tedavisi için kullanılacak
-            <strong>Paimio Sanatoryum</strong>’unun her detayını hastaların
+            Paimio Sanatoryum’unun her detayını hastaların
             ihtiyaçlarına göre tasarlamıştır.
          </p>
          <p>
-            <strong>Paimio</strong> koltuğun tasarımındaki incelik ise;
-            <strong><em>Alvar Aalto</em></strong
-            >, uzun saatler boyunca burada oturacak hastaların rahat etmesi için
+            Paimio koltuğun tasarımındaki incelik ise;
+           Alvar Aalto, uzun saatler boyunca burada oturacak hastaların rahat etmesi için
             özel tasarlamış, sandalyenin sırt açısını da hastaların rahat nefes
             almasını sağlayacak, en iyi açıya getirerek üretmiştir.
          </p>
@@ -63,36 +62,34 @@ tags= ["ana sayfa", "dergi", "ikonik"]
             ahşap halkadan meydana geliyor. Bunların arasında sadece dört
             noktada çerçeveye sabitlenen, hem altta hem üstte içe kıvrılmış
             olarak bulunan preslenmiş ince kontrplak tabakası ise; esnek
-            görünümlü koltuk kısmını <strong></strong>oluşturuyor.
+            görünümlü koltuk kısmını oluşturuyor.
          </p>
          <p>
-            Koltuğun tasarımında, <strong><em>Marcel Breuer</em></strong
-            >’in 1927 yapımı çelik borulardan oluşan
+            Koltuğun tasarımında, <em>Marcel Breuer</em>’in 1927 yapımı çelik borulardan oluşan
             <strong
                ><a
                   href="https://www.markut.net/sayi-0/ikonik-tasarimlar-sandalye/"
                   >Club Chair (Wassily Chair)</a
                ></strong
             >
-            tasarımından ilham alan <em>Aalto</em>,
-            <strong>Club Chair’</strong>in çelik borularını soğuk buluyordu.
+            tasarımından ilham alan Aalto,
+            <em>Club Chair’</em>in çelik borularını soğuk buluyordu.
             Doğal hissi, insansı yapısı ve yalıtım özellikleri nedeniyle bina
             akustiklerinde ve mobilya tasarımlarında sık sık kullandığı
             Finlandiya’nın yerel huş ağacından üretilen ahşabı tercih etmiştir.
          </p>
          <p>
-            <strong>Paimio Sanatoryum&#39;</strong>u
-            <strong><em>Alvar Aalto</em></strong
-            >’yu dünyaca ünlü bir mimar yapıyor ve bu vasıtayla mobilya
+            Paimio Sanatoryum&#39;u
+            Alvar Aalto’yu dünyaca ünlü bir mimar yapıyor ve bu vasıtayla mobilya
             tasarımı kariyerinin de başlangıcını oluşturuyor.
          </p>
          <p>
-            <strong>Paimio Koltuk</strong> günümüzde New York’taki MoMA ve
+            Paimio Koltuk günümüzde New York’taki MoMA ve
             Finlandiya Tasarım Müzesi’nin kalıcı koleksiyonları arasında yer
-            alıyor. Ürün, 1935 yılında <strong><em>Aalto</em></strong> ve eşi
-            <strong><em>Aino</em></strong> tarafından tasarlanan diğer ahşap
+            alıyor. Ürün, 1935 yılında Aalto ve eşi
+            Aino tarafından tasarlanan diğer ahşap
             mobilyaları üretmek ve satmak için
-            kurulan <strong>Artek</strong> firmasının hala aktif olarak
+            kurulan Artek firmasının hala aktif olarak
             üretiminde.
          </p>
       </div>
@@ -122,7 +119,7 @@ tags= ["ana sayfa", "dergi", "ikonik"]
             tasarladı.
          </p>
          <p>
-            <strong>Egg Chair</strong> de <strong>Swan Chair</strong> de
+            Egg Chair de Swan Chair de
             teknolojik olarak yenilikçi sandalyelerdi; düz çizgiler yoktu sadece
             kıvrımlardan oluşuyordu.
             <a href="https://www.markut.net/sayi-0/ikonik-tasarimlar-sandalye/"
@@ -139,10 +136,9 @@ tags= ["ana sayfa", "dergi", "ikonik"]
             kaplanmıştır.
          </p>
          <p>
-            Bu iki orijinal tasarım sandalye, <strong><em>Jacobsen</em></strong
-            >&#39;in Kopenhag&#39;ın kuzeyindeki Klampenborg&#39;daki evinde
+            Bu iki orijinal tasarım sandalye, Jacobsen'in Kopenhag&#39;ın kuzeyindeki Klampenborg&#39;daki evinde
             kendi garajında ortaya çıktı ve o zamandan beri
-            <strong>Fritz Hansen</strong>&#39;de üretiliyor.
+            <em>Fritz Hansen</em>&#39;de üretiliyor.
          </p>
       </div>
    </div>
@@ -185,7 +181,7 @@ tags= ["ana sayfa", "dergi", "ikonik"]
             uygulamayı düşünen
             <strong><em>Pesce</em></strong
             >.. O dönemde firmanın öncüsü olduğu enjekte edilmiş poliüretan
-            teknolojisi sayesinde <strong><em>Pesce</em></strong
+            teknolojisi sayesinde Pesce
             >&#39;nin fikri uygulanabilir hale getirdi. Koltuk elastik
             kumaşlarla kaplandı ve maksimum kasılmayı sağlamak için vakumla
             paketlendi, bu da hacimde % 90&#39;a varan bir azalma sağladı. Aynı
@@ -194,7 +190,7 @@ tags= ["ana sayfa", "dergi", "ikonik"]
             poliüretanla karıştırılmış Freon gazı içindeki hücrelere hava itti
             ve nesne muhteşem bir şekilde yukarıya doğru büyümesini sağladı ve
             orijinal formuna geri döndü. Bu mükemmel yükseliş de ismini almasını
-            sağladı <strong>‘UP’</strong>.
+            sağladı ‘UP’.
          </p>
       </div>
       <div class="col-md-4">
@@ -256,7 +252,7 @@ tags= ["ana sayfa", "dergi", "ikonik"]
    <p class="p-3 p-md-5 bg-grey">
       <em>&gt;&gt; İtalyan tasarım tarihinde bir yer edinmiş tasarım öncüsü</em>
       <strong>Gaetano Pesce</strong>&#39;nin kabarcıklı koltuğu olan
-      <strong>Up</strong> serisinin 50. yıl dönümünü anıyor.  Doğurganlık
+      Up serisinin 50. yıl dönümünü anıyor.  Doğurganlık
       tanrıçasına benzeyen ve bir top ve zincirle birlikte gelen sandalye
       1969&#39;da piyasaya sürüldü. Parça, kadınların mahkum olduğu fikrini ele
       almayı amaçlıyordu. İnsanların önyargısının tutsakları ve tam özgürlüğün
@@ -271,11 +267,11 @@ tags= ["ana sayfa", "dergi", "ikonik"]
       getirmeyi amaçlıyor.&quot;
    </p>
    <p class="p-3 p-md-5 bg-grey">
-      <strong>&quot;Acı Çeken Majesteleri&quot;</strong> başlıklı çalışmaya,
+      &quot;Acı Çeken Majesteleri&quot; başlıklı çalışmaya,
       insan zulmünü simgeleyen altı dev polistiren hayvan başı eşlik ediyor. 
       Yerel yönetim tarafından desteklenen heykel, halk arasında tartışmalara
       yol açtı ve
-      <strong>İtalyan feminist grup Non Una di Meno</strong> tarafından
+     İtalyan feminist grup Non Una di Meno tarafından
       muhalefetle karşılandı. Heykelin kadın bedenini nesneleştirdiğini ve bir
       erkek tarafından yapıldığını protesto edildi. (Jacopo Prico, CNN, 10 Nisan
       2019)
@@ -293,11 +289,11 @@ tags= ["ana sayfa", "dergi", "ikonik"]
          <p class="p-3 p-md-5 bg-yellow">
             <em
                >&quot;Ceci n&#39;est pas une femme&quot; sloganıyla
-               <strong>&quot;Non Una di Meno&quot;</strong> feministleri,</em
+               &quot;Non Una di Meno&quot; feministleri,</em
             >
             <strong>Gaetano Pesce</strong>&#39;nin
             <strong>&quot;Acı Çeken Majesteleri&quot;</strong> yerleştirmesine
-            karşı <strong>Piazza Duomo</strong>&#39;da gösteri yaptılar.
+            karşı Piazza Duomo&#39;da gösteri yaptılar.
             Tasarımcının 1969&#39;da yarattığı ünlü
             <strong>&quot;Up serisi&quot;</strong> koltuğundan esinlenilen eser,
             kadına yönelik şiddet sorununu simgeleyen yüzlerce okla delinmiş bir
@@ -364,32 +360,30 @@ tags= ["ana sayfa", "dergi", "ikonik"]
       </div>
       <div class="col-md-6">
          <p>
-            1935&#39;te sürreal sanatçı <strong>Salvador Dalì</strong>&#39;nin
-            <strong>Mae West Portresi</strong>&#39;nden ve Hollywood
+            1935&#39;te sürreal sanatçı <em>Salvador Dalì</em>&#39;nin
+           Mae West Portresi&#39;nden ve Hollywood
             yıldızlarının kırmızı dudaklarından ilham alan
-            <strong><em>Studio 65 mimarları</em></strong
-            >, bir kült nesnesi olacak bir başyapıta imza attılar.
-            <strong>Bocca</strong>, ev mobilyalarının en çok aranan, sevilen ve
+            Studio 65 mimarları, bir kült nesnesi olacak bir başyapıta imza attılar.
+           Bocca, ev mobilyalarının en çok aranan, sevilen ve
             taklit edilen ürünlerindendir. 1970 orijinali yalnızca
-            <strong>Gufram</strong>&#39;a aittir.
+           Gufram&#39;a aittir.
          </p>
          <p>
-            <strong><em>Gufram</em></strong
-            >; endüstriyel tasarımın sınırlarını zorlamasıyla dünya çapında
+           Gufram; endüstriyel tasarımın sınırlarını zorlamasıyla dünya çapında
             tanınan bir İç Tasarım İtalyan markasıdır. Radikal Tasarım ruhu ve
             estetik, teknolojik ve malzeme araştırmalarıyla bağlantılı uyumsuz
-            deneyimleriyle <strong>Gufram</strong>, kolektif hayal gücüne giren
+            deneyimleriyle Gufram, kolektif hayal gücüne giren
             koltuklar ve iç tasarım ikonları yarattı:
-            <strong>Bocca</strong> gibi.
+            Bocca gibi.
          </p>
          <p>
-            2008&#39;den beri <strong>Bocca</strong>&#39;nın iki yeni versiyonu
-            var: <strong>Dark Lady</strong> ve <strong>Pink Lady</strong>.  İlki
+            2008&#39;den beri Bocca&#39;nın iki yeni versiyonu
+            var: Dark Lady ve Pink Lady. İlki
             - asi, tamamen siyah ve büyük boy bir piercing ile - belirgin bir
-            gotik eğilime sahiptir.  Şehvetli ve rock ruhunu gösteriyor.
+            gotik eğilime sahiptir. Şehvetli ve rock ruhunu gösteriyor.
          </p>
          <p>
-            Diğer versiyon olan <strong>Pink Lady</strong>, daha göz alıcı ve
+            Diğer versiyon olan Pink Lady, daha göz alıcı ve
             modaya uygun bir renkte (fuşya) yeni bir rujla geliyor, bu da onu
             daha çok konuşma konusu olan bir kanepe yapıyor;  muhteşem bir
             ışıltılı modernite için ideal ortam.
@@ -399,7 +393,7 @@ tags= ["ana sayfa", "dergi", "ikonik"]
             yalnızca elli <strong>Bocca</strong> kanepeden oluşan özel bir
             sınırlı seri sunuyor.  Hollywood divalarının kırmızı dudaklarından
             ilham alan ikonik şeklini koruyan bu yeni
-            <strong>GOLD</strong> baskısı, markanın önemli dönüm noktasını
+            GOLD baskısı, markanın önemli dönüm noktasını
             vurguluyor ve dünyanın en güzel evlerine ve en önemli müzelerine
             kabul edilen bir nesneyi daha da zenginleştiriyor.
          </p>
@@ -460,27 +454,25 @@ tags= ["ana sayfa", "dergi", "ikonik"]
       </div>
       <div class="col-md-4">
          <p>
-            <strong>Armut koltuk</strong> olarak da bildiğimiz
-            <strong>Sacco koltuk</strong>lar, günlük hayatımıza eğlenceli bir
+            Armut koltuk olarak da bildiğimiz
+            Sacco koltuklar, günlük hayatımıza eğlenceli bir
             koltuk alternatifi olarak görünse de kendisi mobilya tasarım
             tarihinde devrim niteliğinde bir tasarımdır.
          </p>
          <p>
-            <strong>Armut koltuk</strong>ların, bir çuvalı (Sacco) polistiren
+            Armut koltukların, bir çuvalı (Sacco) polistiren
             toplarla doldurma hareketinin ötesinde, tanımlanmış net bir şekli
             yok. İşte tam da bu nedenle, mevsimler, modalar ve akla gelebilecek
             her &#39;izm&#39; ile zamana meydan okuyan bir tasarımı var.
          </p>
          <p>
-            <strong>&quot;Sacco&quot; Armut koltuk</strong>, 1968 yılında
+            &quot;Sacco&quot; Armut koltuk, 1968 yılında
             İtalya&#39;nın Torino kentinde
-            <strong
-               ><em>Franco Teodoro, Cesare Paolini ve Piero Gatti</em></strong
-            >
+            <em>Franco Teodoro, Cesare Paolini ve Piero Gatti</em>
             tarafından tasarlandı. Tasarımcılarının fikri, herhangi bir
             pozisyonda herhangi bir vücuda kolayca uyum sağlayabilen
             &quot;evrensel&quot; bir koltuk
-            tasarlamaktı. <strong>Sacco</strong>&#39;nun, şüphesiz ki bu
+            tasarlamaktı. Sacco&#39;nun, şüphesiz ki bu
             iddiasını çok iyi yerine getirdiğini söyleyebiliriz.
          </p>
       </div>
@@ -506,23 +498,23 @@ tags= ["ana sayfa", "dergi", "ikonik"]
             Yıllar sonra bir röportajda <strong><em>Gatti</em></strong
             >, ikonik koltuğu yaratma sürecini anlattı:
             <em
-               >“ Farklı durumlara, farklı fiziksel yapılara uyum
+               >"Farklı durumlara, farklı fiziksel yapılara uyum
                sağlayabilecek, olabildiğince esnek nesneler tasarlamak için
                çalışıyorduk. Bu işlevlere izin verecek bir koltuk düşünün dedik.
                Hem vücut hem de pozisyonları için bu uyarlanabilirliğe izin
-               verecek bir malzeme düşünmeye başladık&quot;</em
+               verecek bir malzeme düşünmeye başladık"</em
             >
          </p>
          <p>
-            Tasarımcılar, <strong>armut</strong> koltuğun içini doldurmak için
+            Tasarımcılar, armut koltuğun içini doldurmak için
             konfor seviyesini en iyi sağlayan polistiren ile karşılaştı.
             Polistiren, strafor ile aynı malzeme ailesine aittir ve genel olarak
             paketleme ve yalıtımın yanı sıra ses ve ısı yalıtımı gibi amaçlar
             için kullanılır. Koltuğun dışı sentetik deri veya pamuk / naylon
-            karışımı bir kabuktan yapılmıştır.
+            karışımı bir kabuktan yapılır.
          </p>
          <p>
-            <strong>Sacco</strong> yumuşak ve yardımcı bir nesnedir: üzerine
+            Sacco yumuşak ve yardımcı bir nesnedir: üzerine
             dilediğiniz gibi oturabilir veya üzerine uzanabilirsiniz. Gerçek bir
             &quot;evcilleştirilmiş&quot; bir ürün ve İtalyan tasarımının en
             parlak nesnelerindendir.
@@ -558,22 +550,21 @@ tags= ["ana sayfa", "dergi", "ikonik"]
             hale getirdi.
          </p>
          <p>
-            <strong>&quot;Kubus&quot; koltuk</strong>, Arjantin&#39;in
+            &quot;Kubus&quot; koltuk, Arjantin&#39;in
             bağımsızlığının yüzüncü yılını kutlamak için 1910&#39;da Buenos
             Aires&#39;te düzenlenen bir sergi için yapıldı.  Adı, o yıllarda
             doğup onaylanan kübizmi anımsatmaktadır.
-            <strong><em>Hoffmann</em></strong> bazı açılardan hareketin
-            öncüsüydü.  Her şeyden önce Kubus, <strong><em>Hoffmann</em></strong
-            >&#39;ın geometrik formlara olan tutkusunun ve kareyi sürekli
+            Hoffmann bazı açılardan hareketin
+            öncüsüydü.  Her şeyden önce Kubus, Hoffmann
+            &#39;ın geometrik formlara olan tutkusunun ve kareyi sürekli
             kullanmasının sembolüdür. Bu nedenle mimaride de üslubu
-            <strong>&quot;Quadratstil&quot;</strong> olarak adlandırıldı.
+            &quot;Quadratstil&quot; olarak adlandırıldı.
          </p>
          <p>
             <strong>Kubus Koltuk</strong>, masif ahşap çerçeve üzerine
             poliüretan köpük ve ayrı ayrı dikilmiş ve şeritli deri parçalardan
             yapılmış döşeme ile kaplıdır ve olağanüstü bir tasarım ürünüdür.
-            <strong><em>Josef Hoffmann</em></strong
-            >, modern ve sofistike bir tarz geliştirmişti. Koltuk basit görünse
+            Josef Hoffmann, modern ve sofistike bir tarz geliştirmişti. Koltuk basit görünse
             de aslında detaylara gösterilen titizliğin bir sonucudur.
          </p>
       </div>
