--- a/content/dergi/sayi-7/tatbiki-marmara-gsf/index.html
+++ b/content/dergi/sayi-7/tatbiki-marmara-gsf/index.html
@@ -4,12 +4,12 @@ description=""
 url="sayi-7/tatbiki-marmara-gsf"
 aciklama="1950’li yıllarda endüstri ve endüstrileşme hızının artmasıyla Türkiye’de de Bauhaus ilkeleri doğrultusunda kurulan bir okula ihtiyaç duyulmaya başlanmıştır. Bu ihtiyacın giderilmesi için ortaya çıkan ilk kurum Tatbiki Güzel Sanatlar Yüksek Okuludur."
 type="sayfa"
-thumb="/img/"
+thumb="/img/tatbiki-marmara-gsf-thumbnail.jpg"
 date = "2021-03-02"
 sayi=["07"]
 sayfa="01"
 yazar=["elif ersoz", "atahan gokturk"]
-tags= ["ana sayfa", "dergi"]
+tags= ["anasayfa", "dergi"]
 +++
 
 <div class="container">
