--- a/content/dergi/sayi-3-3byazici.html
+++ b/content/dergi/sayi-3-3byazici.html
@@ -13,7 +13,7 @@ sayfa="03"
 yazar=["Hilal Doruk"]
 type="sayfa"
 tags= [
-"anasayfa", "dergi", "3d Baski"
+"dergi", "3d Baski"
 ]
 +++
 <div class="container">
