--- a/content/dergi/sayi-5/minimalizm/index.html
+++ b/content/dergi/sayi-5/minimalizm/index.html
@@ -4,12 +4,12 @@ description=""
 url="sayi-5/minimalizm-surdurulebilir-tasarim"
 aciklama="“Fakirlik, yoksunluk, eksiklik değildir minimalizm; aksine bilinçli bir tercihtir. Zor olanı seçmektir, azla çok yapmaktır.” -Mies van der Rohe"
 type="sayfa"
-thumb="/img/"
+thumb="/img/minimailizm-surdurulebilir-tasarim-thumbnail.jpg"
 date = "2021-01-01"
 sayi=["05"]
 sayfa="03"
 yazar=["ece celik"]
-tags= ["ana sayfa", "dergi"]
+tags= ["anasayfa", "dergi", "surdurulebilir tasarim", "ekoloji", "sanat akimi"]
 +++
 
 
