--- a/content/dergi/sayi-8/futurizm/index.html
+++ b/content/dergi/sayi-8/futurizm/index.html
@@ -1,5 +1,5 @@
 +++
-title = "Fütüristik tasarımlar"
+title = "Fütüristik Tasarımlar"
 description=""
 url="sayi-8/futuristik-tasarimlar"
 aciklama="Gelecek birçok olasılığı, bilinmezliği içinde barındırır. Gelecekte ne olacağı, nasıl bir dünyada olacağımız merak konusudur. Otonom araçlar, yapay zeka teknolojilerinin gelişmesi -belki evrimi-, nanoteknolojinin gelişmesi, dronların kullanımının artması, daha sofistike androidlerin üretilmesi, dünya dışı gezegenlerden yeni ev(ler)imiz Dünya-02 ve belki de uzaylı dostlarımız(?)..."
