--- a/content/dergi/sayi-8/tarim-tasarim/index.html
+++ b/content/dergi/sayi-8/tarim-tasarim/index.html
@@ -4,7 +4,7 @@ description=""
 url="sayi-8/tarim-traktor-tasarim"
 aciklama="Binlerce yıl tarım ve çiftçilik, insan ve hayvan gücüyle işledi. Ancak 19. yüzyıla gelindiğinde tarımın da seyri değişti. Gelişen alet ve makineler yeni bir çağı başlatırken gıdayı tarladan sofraya getiren traktörler, hayatı kolaylaştırdı... Sadece insan hayatını da değil..."
 type="sayfa"
-thumb="/img/tasarim-tarim-traktor-thumbnail.png"
+thumb="/img/tasarim-tarim-traktor-thumbnail.jpg"
 date = "2021-04-01"
 sayi=["08"]
 sayfa="01"
