sayı 9 ufak tefek

--- a/content/dergi/sayi-9/mikroplastikler/index.html
+++ b/content/dergi/sayi-9/mikroplastikler/index.html
@@ -70,22 +70,23 @@ tags= ["ana sayfa", "dergi"]
       >}}</div>
     </div>
 
-<div class="text-center">
-      {{<img
-         src="mikroplastik02.jpg"
-         referrerpolicy="no-referrer"
-         alt="mikroplastik02.jpg"
-      >}}
+    <div class="row">
+       <div class="col md-6">
+         {{<img
+            src="mikroplastik-atiklar.jpg"
+            referrerpolicy="no-referrer"
+            alt="Mikroplastik Atıklar"
+         >}}
+       </div>
     </div>
+
 
    <h3 id="gıdalarda-mikroplastik">Gıdalarda Mikroplastik</h3>
        <div class="row">
         <div class="col-md-6"> <p>
       Yapılan çalışmalara göre sahil kumunda, deniz ürünlerinde, sofra tuzunda,
       karton bardaklarda, biberonda ve son olarak
-      <a href="https://www.bbc.com/turkce/haberler-dunya-55412052"
-         >plasentada</a
-      >
+      <a href="https://www.bbc.com/turkce/haberler-dunya-55412052" target="_blank" rel="noopener noreferrer">plasentada</a>
       dahi bulunan, boyutları milimetrenin binde birine kadar küçülebilen
       mikroplastiklerin ambalajlı gıdalarda da bulunduğu bildirildi. Gıdalardaki
       mikroplastik varlığının genellikle hammadde, üretim aşamaları veya
@@ -99,7 +100,9 @@ tags= ["ana sayfa", "dergi"]
       imkansız ve bunlar da bizim vücudumuza karışıyor” şeklinde açıklar. Hal
       böyle iken mikroplastiklerden kaçınmak oldukça zorlaşıyor.
       Mikroplastiklerden kaçınmak için alabileceğimiz bazı önlemlere bakalım.
-   </p> {{<img src="konserve.jpg" referrerpolicy="no-referrer" alt="konserve.jpg" >}}
+   </p> <br><br><br>
+   
+   {{<img src="konserve.jpg" referrerpolicy="no-referrer" alt="konserve.jpg" >}}
    </div>
         <div class="col-md-6"> {{<img
          src="mikroplastik-sise.jpg"
@@ -108,13 +111,8 @@ tags= ["ana sayfa", "dergi"]
       >}}</div>
     </div>
 
-    
    <p class="text-center">
-      {{<img
-         src="mikroplastik-dongusu-balik.jpg"
-         referrerpolicy="no-referrer"
-         alt="Untitled%201.jpg"
-      >}}
+      <img src="https://www.markut.net/sayi-9/plastik-cagi-mikroplastikler/mikroplastik-dongusu-balik.svg" alt="">
    </p>
 
    <p class="text-center">
@@ -192,7 +190,7 @@ tags= ["ana sayfa", "dergi"]
     </div>
 
 
-        <div class="row">
+        <div class="row  mt-md-5">
         <div class="col-md-4">   <p>
       Harap olan ekosistemlerin yenilenmesi için uzun bir sürece ve çabaya
       ihtiyaç var. O yüzden yaşadığımız ekosistemi ve çevreyi korumak adına
