--- a/content/dergi/sayi-9/pop-art/index.html
+++ b/content/dergi/sayi-9/pop-art/index.html
@@ -451,7 +451,7 @@ tags= ["ana sayfa", "dergi"]
             <p>
                &quot;Sanatın propaganda olduğunu sanmıyorum. Ruhu özgürleştiren,
                hayal gücünü kışkırtan ve insanları daha ileri gitmeye teşvik
-               eden bir şey olmalı. Sanat, insanlığı manipüle etmek yerine kutluyor.
+               eden bir şey olmalı.
                &quot;
             </p>
          </blockquote>
