--- a/content/dergi/sayi-9/kapak.html
+++ b/content/dergi/sayi-9/kapak.html
@@ -3,7 +3,7 @@ title = "Sayı 9 İçindekiler"
 url = "sayi-9/"
 seotitle = "Tasarım Dergisi Sayı 9 - Mayıs 2021"
 description="Markut derginin yeni sayısı 9. sayı çıktı. Endüstriyel tasarım dergimizden 9. sayımızı online ücretsiz okuyabilirsiniz."
-aciklama="<h3 style='text-align: center;'>‘‘'İmza yerinde bir üçgen ve eski harflerle İhap Hulusi, sene 1923…’’</h3> <h5><em></em></em></h5>"
+aciklama="<h3 style='text-align: center;'>‘‘İmza yerinde bir üçgen ve eski harflerle İhap Hulusi, sene 1923…’’</h3> <h5><em></em></em></h5>"
 date = "2021-05-05"
 yazar=["Markut"]
 sayi=[
@@ -13,4 +13,4 @@ sayfa="00"
 thumb="/img/markut-sayi-9-kapak-mayis-2021.svg"
 type= "kapak"
 tags=[]
-+++
++++ 
