--- a/content/dergi/sayi-9/mikroplastikler/index.html
+++ b/content/dergi/sayi-9/mikroplastikler/index.html
@@ -4,7 +4,7 @@ description=""
 url="sayi-9/plastik-cagi-mikroplastikler"
 aciklama="Teknolojinin gelişmesi, yeni buluşlar ve küreselleşme ile birlikte birçok yenilik hayatımıza girdi. Peki, bu hızlı gelişmeler dünyanın ekosistemini nasıl etkiledi? Hızlı tüketim ve buna katkı sağlayan birçok faktör dünyamıza çevre kirliliği olarak geri döndü. 1950’li yıllarda başlayan plastik kullanımı her alanda kolaylıkla kullanım ve ucuza mal edilme gibi nedenlerle günümüz plastik çağ olarak adlandırılmaya başladı."
 type="sayfa"
-thumb="/img/tasarim-sozlugu-kolaj-thumbnail.jpg"
+thumb="/img/mikroplastikler-thumbnail.jpg"
 date = "2021-05-05"
 sayi=["09"]
 sayfa="03"
@@ -190,7 +190,7 @@ tags= ["ana sayfa", "dergi"]
     </div>
 
 
-        <div class="row  mt-md-5">
+        <div class="row  mt-6">
         <div class="col-md-4">   <p>
       Harap olan ekosistemlerin yenilenmesi için uzun bir sürece ve çabaya
       ihtiyaç var. O yüzden yaşadığımız ekosistemi ve çevreyi korumak adına
