--- a/content/dergi/sayi-9/pop-art/index.html
+++ b/content/dergi/sayi-9/pop-art/index.html
@@ -19,7 +19,7 @@ tags= ["ana sayfa", "dergi"]
    </p>
    <p>
       Aynı yıllarda Amerikalılar, topluma bir rüya adı altında tüketim üzerine
-      kurulu bir yaşam tarzı sunmaktadır. (7.sayımızdakı &#39;&#39;Amerikan
+      kurulu bir yaşam tarzı sunmaktadır. (7. sayımızdakı &#39;&#39;Amerikan
       Rüyası&#39;&#39; adlı yazımıza
       <a href="https://www.markut.net/sayi-7/amerikan-ruyasi/">buradan</a>
       ulaşabilirsiniz.) Toplumda etkisini giderek arttıran yeni tüketim dünyası
@@ -40,7 +40,7 @@ tags= ["ana sayfa", "dergi"]
             >}}
          </p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-5">
          <p>
             Pop Art sanatçıları resim, heykel, filmler ve çevresel
             düzenlemelerle kendilerini ifade ederken konu olarak gündelik yaşam
@@ -52,7 +52,7 @@ tags= ["ana sayfa", "dergi"]
             tanınan nesne ve insanlara yönelik düz bir yaklaşım.
          </p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
          <p>
             {{<img
                src="pop-art-iconic-works-1.jpg"
@@ -70,7 +70,7 @@ tags= ["ana sayfa", "dergi"]
       kavramlarla ilişkisi kesinlikle eleştirel değildir.
    </p>
    <p>
-      Pop art bir önbilgi gerektirmemektedir. Kolay, çabuk ve eğlenceliydir.
+      Pop art bir önbilgi gerektirmemektedir. Kolay, çabuk ve eğlencelidir.
       Gündelik modern hayatı işler. Sanatçılarının eserleri, sıradan insanlar
       içindir. Popüler sanat olgusu Amerika&#39;da bir kitle hareketine
       dönüşmüştür. Bunun başlıca sebebi ise televizyon, radyo, gazete ve dergi
@@ -153,7 +153,7 @@ tags= ["ana sayfa", "dergi"]
             >}}
          </p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-5">
          <p>
             Campbell&#39;s serigrafileri hamdır. Özgün fırça darbeleri gibi
             &#39;&#39;sanatsal&#39;&#39; dokunuş içermezler. Çünkü Warhol&#39;un
@@ -164,7 +164,7 @@ tags= ["ana sayfa", "dergi"]
             süslemeyerek &#39;&#39;doğal güzellik&#39;&#39; i vurguluyordu.
          </p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
          <p>
             {{<img
                src="andy-warhol-campbells-tomato-soup.jpg"
@@ -447,6 +447,7 @@ tags= ["ana sayfa", "dergi"]
             >}}
          </p>
          <small>Pop Shop 1, 1987</small>
+         <br><br>
          <blockquote>
             <p>
                &quot;Sanatın propaganda olduğunu sanmıyorum. Ruhu özgürleştiren,
