--- a/content/dergi/sayi-9/tasarim-sozlugu-kolaj/index.html
+++ b/content/dergi/sayi-9/tasarim-sozlugu-kolaj/index.html
@@ -99,7 +99,7 @@ tags= ["ana sayfa", "dergi"]
 <p>
    Daha sonra Dadacılar ve Gerçeküstücüler tarafından geliştirilen
    <strong>Fotomontaj</strong> tekniğinin öncüsü kolajdır. Yine II. Dünya savaşı
-   sonrasında orta çıkan Pop art, Yeni Dada, Yeni Gerçekçilik gibi akımların
+   sonrasında ortaya çıkan Pop Art, Yeni Dada, Yeni Gerçekçilik gibi akımların
    eserlerinin de ilham kaynağıdır.
 </p>
 
