--- a/content/dergi/sayi-9/pop-art/index.html
+++ b/content/dergi/sayi-9/pop-art/index.html
@@ -19,7 +19,7 @@ tags= ["ana sayfa", "dergi"]
    </p>
    <p>
       Aynı yıllarda Amerikalılar, topluma bir rüya adı altında tüketim üzerine
-      kurulu bir yaşam tarzı sunmaktadır. (7. sayımızdakı &#39;&#39;Amerikan
+      kurulu bir yaşam tarzı sunmaktadır. (7. sayımızdaki &#39;&#39;Amerikan
       Rüyası&#39;&#39; adlı yazımıza
       <a href="https://www.markut.net/sayi-7/amerikan-ruyasi/" target="_blank">buradan</a>
       ulaşabilirsiniz.) Toplumda etkisini giderek arttıran yeni tüketim dünyası
